# amazon-trends-mcp

./: README.md  pyproject.toml
src/amazon_trends_mcp/: __init__.py
